--- a/docs/valex.cc/views/about.html
+++ b/docs/valex.cc/views/about.html
@@ -13,7 +13,7 @@
     <table class="table table-ruled table-full-width table-with-spacious-first-column mb-7">
       {{#each items}}
         {{#if this.isTool}}
-          {{#if this.isForElectron}}
+          {{#if this.isForValex}}
             <tr>
               <td>
                 <a href="{{ this.href }}">{{ this.name }}</a>
