--- a/docs/valex.cc/views/apps/index.html
+++ b/docs/valex.cc/views/apps/index.html
@@ -55,7 +55,7 @@
     </ul>
 
     <p class="mt-6">
-      <a href="https://github.com/electron/electron-apps#readme">Make a Pull Request</a> to add your application.
+      <a href="https://github.com/valex/electron-apps#readme">Make a Pull Request</a> to add your application.
     </p>
     <hr>
   </div>
