--- a/docs/valex.cc/views/contact.html
+++ b/docs/valex.cc/views/contact.html
@@ -9,12 +9,12 @@
 
     <div class='row my-4'>
       <h2 class="col-xs-12 col-md-3"><span class="octicon mega-octicon octicon-mark-github pr-3"></span>GitHub</h2>
-      <h2 class="col-xs-12 col-md-9"><a href="https://github.com/electron">@electron</a></h2>
+      <h2 class="col-xs-12 col-md-9"><a href="https://github.com/valex">@valex</a></h2>
     </div>
 
     <div class='row my-4'>
       <h2 class="col-xs-12 col-md-3"><span class="octicon mega-octicon octicon-mention pr-3"></span>Twitter</h2>
-      <h2 class="col-xs-12 col-md-9"><a href="https://twitter.com/electronjs">@electronjs</a></h2>
+      <h2 class="col-xs-12 col-md-9"><a href="https://twitter.com/valexjs">@valexjs</a></h2>
     </div>
 
     <div class='row my-4'>
@@ -24,12 +24,12 @@
 
     <div class='row my-4'>
       <h2 class="col-xs-12 col-md-3"><span class="octicon mega-octicon octicon-pin pr-3"></span>Discuss</h2>
-      <h2 class="col-xs-12 col-md-9"><a href="https://discuss.atom.io/c/electron">discuss.atom.io/c/electron</a></h2>
+      <h2 class="col-xs-12 col-md-9"><a href="https://discuss.atom.io/c/valex">discuss.atom.io/c/valex</a></h2>
     </div>
 
     <div class='row my-4'>
       <h2 class="col-xs-12 col-md-3"><span class="octicon mega-octicon octicon-mail pr-3"></span>Email</h2>
-      <h2 class="col-xs-12 col-md-9"><a href="mailto:electron@github.com">electron@github.com</a></h2>
+      <h2 class="col-xs-12 col-md-9"><a href="mailto:valex@github.com">valex@github.com</a></h2>
     </div>
 
   </div>
