--- a/docs/valex.cc/views/docs/development.html
+++ b/docs/valex.cc/views/docs/development.html
@@ -1,4 +1,4 @@
-<h2 class="docs-heading pb-3 mb-3"><span class="mega-octicon octicon-tools pr-3"></span>Developing Electron</h2>
+<h2 class="docs-heading pb-3 mb-3"><span class="mega-octicon octicon-tools pr-3"></span>Developing Valex</h2>
 
 <ul class="docs-list">
 {{#each docs}}
