--- a/docs/valex.cc/views/partials/footer.html
+++ b/docs/valex.cc/views/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="container">
     <nav class="footer-nav">
-      <a class="footer-nav-item" href="/">Electron</a>
+      <a class="footer-nav-item" href="/">Valex</a>
       <a class="footer-nav-item" href="/docs">{{localized.nav.docs}}</a>
       <a class="footer-nav-item" href="/blog">{{localized.nav.blog}}</a>
       <a class="footer-nav-item" href="/about">{{localized.nav.about}}</a>
