--- a/docs/valex.cc/views/partials/userland/header.html
+++ b/docs/valex.cc/views/partials/userland/header.html
@@ -9,10 +9,10 @@
       </h4>
     {{else}}
      <a href="{{site.baseurl}}/userland">
-       <h1>Electron Userland</h1>
+       <h1>Valex Userland</h1>
      </a>
      <p class="lead mb-3">
-       The people, apps, and packages of Electron's open-source ecosystem.
+       The people, apps, and packages of Valex's open-source ecosystem.
      </p>
     {{/if}}
   </div>
