--- a/docs/valex.cc/views/docs/versions.html
+++ b/docs/valex.cc/views/docs/versions.html
@@ -1,7 +1,7 @@
 <ul>
   {{#each versions}}
     <li>
-      <a href="https://github.com/electron/electron/tree/v{{this.version}}/docs">{{this.version}}</a>
+      <a href="https://github.com/valex/valex/tree/v{{this.version}}/docs">{{this.version}}</a>
     </li>
   {{/each}}
 </ul>
