--- a/docs/valex.cc/views/home.html
+++ b/docs/valex.cc/views/home.html
@@ -9,8 +9,8 @@
 
 <div class="subtron py-4 text-center">
   <div class="container">
-    <div id="electron-versions" class="electron-versions">
-      <span class="electron-versions-main">Electron: <strong>{{{vendoredVersions.version}}}</strong></span>
+    <div id="valex-versions" class="valex-versions">
+      <span class="valex-versions-main">Valex: <strong>{{{vendoredVersions.version}}}</strong></span>
       <span>Node: <strong>{{{vendoredVersions.node}}}</strong></span>
       <span>Chromium: <strong>{{{vendoredVersions.chrome}}}</strong></span>
       <span>V8: <strong>{{{vendoredVersions.v8}}}</strong></span>
@@ -18,15 +18,15 @@
   </div>
 </div>
 
-<section class="page-section page-section-spacious" id='electron'>
+<section class="page-section page-section-spacious" id='valex'>
   <div class="container-narrow">
-    <h1 class="text-center-sm">{{{localized.electron_is_easy.title}}}</h1>
-    <p class="lead text-center-sm">{{{localized.electron_is_easy.description}}}</p>
+    <h1 class="text-center-sm">{{{localized.valex_is_easy.title}}}</h1>
+    <p class="lead text-center-sm">{{{localized.valex_is_easy.description}}}</p>
 
     <p class="text-center-sm mt-4">
       <a class="btn btn-lg btn-outline-themed" href="https://youtu.be/8YP_nOCO-4Q">
         <span class="octicon octicon-eye mr-1"></span>
-        <span class="label">{{{localized.electron_is_easy.video_link}}}</span>
+        <span class="label">{{{localized.valex_is_easy.video_link}}}</span>
       </a>
     </p>
 
@@ -100,9 +100,9 @@
 
     <div class='row mt-8'>
       <div class='col-xs-12 col-md-5'>
-        <a href="https://github.com/electron/electron-api-demos/releases">
+        <a href="https://github.com/valex/valex-api-demos/releases">
           <div class="app-frame py-4 px-6">
-            <img alt="Screenshot of Electron API Demos app" src='/images/electron-api-demos.png'>
+            <img alt="Screenshot of Valex API Demos app" src='/images/valex-api-demos.png'>
           </div>
         </a>
       </div>
@@ -110,7 +110,7 @@
         <h3 class="mt-1 mb-3">{{{localized.explore.title}}}</h3>
         <p>{{{localized.explore.description}}}</p>
         <p>
-          <a id="download-latest-release" class="btn btn-lg btn-outline-themed" href="https://github.com/electron/electron-api-demos/releases">
+          <a id="download-latest-release" class="btn btn-lg btn-outline-themed" href="https://github.com/valex/valex-api-demos/releases">
             <span class="octicon octicon-desktop-download mr-1"></span>
             <span class="label">{{{localized.download_from_github}}}</span>
           </a>
@@ -130,10 +130,10 @@
 
   <figure class="highlight highlight-dark text-left my-4">
 <pre><code><span class="c1"># {{{localized.quick_start.clone}}}</span>
-$ git clone https://github.com/electron/electron-quick-start
+$ git clone https://github.com/valex/valex-quick-start
 
 <span class="c1"># {{{localized.quick_start.go_into_repo}}}</span>
-$ cd electron-quick-start
+$ cd valex-quick-start
 
 <span class="c1"># {{{localized.quick_start.install_deps}}}</span>
 $ npm install &amp;&amp; npm start</code></pre>
@@ -170,7 +170,7 @@ $ npm install &amp;&amp; npm start</code></pre>
       <p class="mt-6">
         <a href='/apps'>{{{localized.apps.view_more}}}</a>
           {{{localized.or}}}
-          <a href="https://github.com/electron/valex.cc/blob/gh-pages/CONTRIBUTING.md#adding-an-app-or-project-to-the-site">{{{localized.apps.submit_your_own}}}</a>.
+          <a href="https://github.com/valex/valex.cc/blob/gh-pages/CONTRIBUTING.md#adding-an-app-or-project-to-the-site">{{{localized.apps.submit_your_own}}}</a>.
       </p>
     </div>
   </div>
