--- a/docs/valex.cc/views/layouts/docs.html
+++ b/docs/valex.cc/views/layouts/docs.html
@@ -2,13 +2,13 @@
 
 <div class='subtron text-left'>
   <div class='container-narrow'>
-      <h1><span class="mr-3 mr-lg-4">{{localized.docs.title}}</span><span class="docs-version">{{electronLatestStableVersion}}</span></h1>      
+      <h1><span class="mr-3 mr-lg-4">{{localized.docs.title}}</span><span class="docs-version">{{valexLatestStableVersion}}</span></h1>      
   </div>
   
   <div class='container-narrow'>
 
     <h4 class="docs-breadcrumbs">
-      <a href='/'>Electron {{electronLatestStableVersion}}</a> /
+      <a href='/'>Valex {{valexLatestStableVersion}}</a> /
       <a href='/docs'>Docs</a> /
       {{#if category}}
         {{category}}
