--- a/docs/valex.cc/views/partials/head.html
+++ b/docs/valex.cc/views/partials/head.html
@@ -30,7 +30,7 @@
     <meta name="twitter:card" content="summary">
   {{/if}}
 
-  <meta name="twitter:site" content="@ElectronJS" />
+  <meta name="twitter:site" content="@ValexJS" />
   <link rel='shortcut icon' href='/images/favicon.ico'/>
   <link rel='stylesheet' href='/styles/index.css'>
 
