--- a/docs/valex.cc/views/posts/index.html
+++ b/docs/valex.cc/views/posts/index.html
@@ -1,8 +1,8 @@
 <div class='subtron'>
   <div class='container-narrow'>
-    <h1>Electron Blog</h1>
+    <h1>Valex Blog</h1>
     <p class="lead mb-3">
-       All the latest news from the Electron team and community.
+       All the latest news from the Valex team and community.
     </p>
   </div>
 </div>
