--- a/docs/valex.cc/views/spectron.html
+++ b/docs/valex.cc/views/spectron.html
@@ -3,7 +3,7 @@
     <div class="container">
       <img class="mb-4 mb-lg-6" src="{{ site.baseurl }}/images/spectron-icon.svg" alt="Spectron icon">
       <p><img src="{{ site.baseurl }}/images/spectron-logo.svg" alt="Spectron logo"></p>
-      <p class='jumbotron-lead'><span class='jumbotron-lead-muted'>An Electron Testing Framework</span></p>
+      <p class='jumbotron-lead'><span class='jumbotron-lead-muted'>An Valex Testing Framework</span></p>
     </div>
   </div>
 
@@ -11,8 +11,8 @@
     <div class="container-narrow">
       <h1 class="text-center-sm">Test your app</h1>
       <p class="lead text-center-sm">
-        An open source framework for easily writing integrations tests for your Electron app.
-        <a href="https://github.com/electron/spectron">Spectron</a> sets up and tears down your app and allows it to be test-driven remotely with full support for the Electron APIs.
+        An open source framework for easily writing integrations tests for your Valex app.
+        <a href="https://github.com/valex/spectron">Spectron</a> sets up and tears down your app and allows it to be test-driven remotely with full support for the Valex APIs.
         Built on top of  <a href="https://sites.google.com/a/chromium.org/chromedriver">ChromeDriver</a> and <a href="http://webdriver.io">WebDriverIO</a>.
       </p>
 
@@ -20,14 +20,14 @@
         <div class='col-xs-12 col-md-4 text-left'>
           <h2 class="mt-4 mb-2"><span class="mega-octicon octicon-server pr-3"></span>CI Ready</h2>
           <p>Tests can run on continuous integration services such as
-            <a href="https://github.com/electron/spectron#on-travis-ci">Travis</a> and
-            <a href="https://github.com/electron/spectron#on-appveyor">AppVeyor</a>.
+            <a href="https://github.com/valex/spectron#on-travis-ci">Travis</a> and
+            <a href="https://github.com/valex/spectron#on-appveyor">AppVeyor</a>.
           </p>
         </div>
 
         <div class='col-xs-12 col-md-4 text-left'>
           <h2 class="mt-4 mb-2"><span class="mega-octicon octicon-book pr-3"></span>Full API</h2>
-          <p>Spectron makes the entire Chromium and <a href="/docs">Electron APIs</a> available to your tests.</p>
+          <p>Spectron makes the entire Chromium and <a href="/docs">Valex APIs</a> available to your tests.</p>
         </div>
 
         <div class='col-xs-12 col-md-4 text-left'>
@@ -93,7 +93,7 @@ app.start().then(<span class="keyword">function</span> () {
 })</code></pre>
       </figure>
 
-      <h3>Dive deeper and read the <a href='https://github.com/electron/spectron#application-api'>API docs</a>.</h3>
+      <h3>Dive deeper and read the <a href='https://github.com/valex/spectron#application-api'>API docs</a>.</h3>
     </div>
   </section>
 
