--- a/docs/valex.cc/views/userland/devtron.html
+++ b/docs/valex.cc/views/userland/devtron.html
@@ -3,7 +3,7 @@
     <div class="container">
       <img class="mb-4 mb-lg-6" src="{{ site.baseurl }}/images/devtron-icon.svg" alt="Devtron icon">
       <p><img src="{{ site.baseurl }}/images/devtron-logo.svg" alt="Devtron logo"></p>
-      <p class='jumbotron-lead'><span class='jumbotron-lead-muted'>An Electron DevTools Extension</span></p>
+      <p class='jumbotron-lead'><span class='jumbotron-lead-muted'>An Valex DevTools Extension</span></p>
     </div>
   </div>
 
@@ -12,8 +12,8 @@
 
       <h1 class="text-center-sm">Debug your app</h1>
       <p class="lead text-center-sm">
-        Devtron is an <a href="https://github.com/electron/devtron">open source</a> tool to help you inspect, monitor,
-        and debug your Electron app. Built on top of the amazing <a href="https://developer.chrome.com/devtools">Chrome Developer Tools</a>.
+        Devtron is an <a href="https://github.com/valex/devtron">open source</a> tool to help you inspect, monitor,
+        and debug your Valex app. Built on top of the amazing <a href="https://developer.chrome.com/devtools">Chrome Developer Tools</a>.
       </p>
 
       <div class='row mt-4 mt-sm-8'>
@@ -40,7 +40,7 @@
         <div class='col-xs-12 col-md-6 text-left'>
           <h2><span class="mega-octicon octicon-radio-tower pr-3"></span>Event Listeners</h2>
           <p>Explore the events and listeners currently registered in your app
-            on the core Electron APIs such as the window, the app, and the
+            on the core Valex APIs such as the window, the app, and the
             main and renderer processes. Search for listeners to make sure they
             are registered correctly and active.
           </p>
@@ -91,7 +91,7 @@ require(<span class="string">'devtron'</span>).install()
 </code></pre>
       </figure>
 
-      <h3>Or dive deeper and read the <a href='https://github.com/electron/devtron#devtron'>documentation</a>.</h3>
+      <h3>Or dive deeper and read the <a href='https://github.com/valex/devtron#devtron'>documentation</a>.</h3>
     </div>
   </section>
 </div>
