Got localization to stop preventing changes :)

--- a/docs/valex.cc/views/home.html
+++ b/docs/valex.cc/views/home.html
@@ -10,10 +10,10 @@
 <div class="subtron py-4 text-center">
   <div class="container">
     <div id="valex-versions" class="valex-versions">
-      <span class="valex-versions-main">Valex: <strong>{{{vendoredVersions.version}}}</strong></span>
-      <span>Node: <strong>{{{vendoredVersions.node}}}</strong></span>
-      <span>Chromium: <strong>{{{vendoredVersions.chrome}}}</strong></span>
-      <span>V8: <strong>{{{vendoredVersions.v8}}}</strong></span>
+      <span class="valex-versions-main">Valex: <strong>0.1</strong></span>
+      <span class="valex-versions-main">Desktop Client: <strong>0.1</strong></span>
+      <!--<<span>Chromium: <strong>{{{vendoredVersions.chrome}}}</strong></span>-->
+      <!--<<span>V8: <strong>{{{vendoredVersions.v8}}}</strong></span>-->
     </div>
   </div>
 </div>
